--- a/index.html
+++ b/index.html
@@ -24,11 +24,23 @@
             aria-label="Generated Password"
           ></textarea>
         </div>
+        <div>
+          <ul id="list" class="criteria">
+            <li id="criteria-1"></li>
+            <li id="criteria-2"></li>
+            <li id="criteria-3"></li>
+            <li id="criteria-4"></li>
+          </ul>
+        </div>
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
         </div>
       </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+    integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
+    crossorigin="anonymous"></script>
     <script src=".//assets/js/script.js"></script>
   </body>
 </html>
